[gd_scene load_steps=6 format=3 uid="uid://dd3vra1iyxgg7"]

[ext_resource type="Script" path="res://Scene/game.gd" id="1_asfsb"]
[ext_resource type="PackedScene" uid="uid://c8t3268rex13" path="res://Components/Player/player.tscn" id="2_uxu3y"]
[ext_resource type="Script" path="res://Scene/StartMenu.gd" id="3_y6vwx"]

[sub_resource type="SystemFont" id="SystemFont_hqiov"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_6eq8j"]
font = SubResource("SystemFont_hqiov")
font_size = 21
font_color = Color(0.988235, 0.988235, 0.984314, 1)

[node name="game" type="Node2D"]
script = ExtResource("1_asfsb")
player = ExtResource("2_uxu3y")

[node name="G" type="CanvasLayer" parent="."]

[node name="StartMenu" type="Control" parent="G"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_y6vwx")
metadata/_edit_use_anchors_ = true

[node name="label" type="Label" parent="G/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.513298
anchor_top = 0.191617
anchor_right = 0.513298
anchor_bottom = 0.191617
offset_left = -48.5
offset_right = 48.5
offset_bottom = 30.0
grow_horizontal = 2
text = "EldanRPG"
label_settings = SubResource("LabelSettings_6eq8j")
metadata/_edit_use_anchors_ = true

[node name="start_button" type="Button" parent="G/StartMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.404255
anchor_top = 0.598802
anchor_right = 0.606383
anchor_bottom = 0.667665
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"
metadata/_edit_use_anchors_ = true

[connection signal="start_game" from="G/StartMenu" to="." method="_on_start_menu_start_game"]
[connection signal="pressed" from="G/StartMenu/start_button" to="G/StartMenu" method="_on_button_pressed"]
